--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -14,7 +14,132 @@
 %%% TITLE: Dealing with Multi/Wilkosz
 %%% SYSTEM BEGIN %%%
 
-TBD
+\subsubsection*{(2\diams) -- ?}
+\begin{itemize}
+    \item \dbl = (13)14-16 BAL, no 5M, may have minor singleton
+    \item 2\hearts = 11-15, 5+\hearts
+    \item 2\spades = 11-15, 5+\spades
+    \item 2\nt = 17-19, BAL, may have 5M
+    \item 3\clubs = \clubs, not 5332/5422
+    \item 3\diams = \diams, not 5332/5422
+    \item 3\hearts, 3\spades = solid suit, weaker then power double
+    \item 3\nt = minors
+    \item 4\clubs = \clubs + \major
+    \item 4\diams = \diams + \major
+\end{itemize}
+
+\subsubsection*{(2\diams) -- P -- (P\alrts) -- ?}
+System like after 2\diams preempt.
+
+\subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
+\begin{itemize}
+    \item \pass = no suitable call OR takeout with \spades shortness
+    \item \dbl = 14-16 BAL \vimp
+    \item 2\spades = 11-15, 5+\spades, may be solid 4\spades with 1-\hearts
+    \item 2\nt = 17-19, BAL
+\end{itemize}
+
+\subsubsection*{(2\diams) -- P -- (2\spades) -- ?}
+\begin{itemize}
+    \item \pass = no suitable call OR takeout with \hearts shortness
+    \item \dbl = takeout with \spades shortness \imp
+    \item 2\nt = 17-19, BAL
+\end{itemize}
+
+\subsubsection*{(2\diams) -- P -- (>2\spades) -- ?}
+\begin{itemize}
+    \item \dbl = takeout \imp
+\end{itemize}
+
+\subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
+                (P) -- ?}        
+\begin{itemize}
+    \item 2\nt = minors
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- ?}        
+\begin{itemize}
+    \item \pass = want to defend, doubles are penalty
+    \item 2\major = 5+\major, to play
+    \item 2\nt = Lebensohl (see below)
+    \item 3\clubs = Stayman
+    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
+    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
+    \item 3\spades = $\rightarrow$ \nt, no \major stoppers
+    \item 4\diams, 4\hearts = Texas
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- 2\nt \\
+                (P) -- 3\clubs -- (P) -- ?}        
+\begin{itemize}
+    \item \pass = to play
+    \item 3\diams = \gf, no 4\majs
+    \item 3\hearts, 3\spades = \inv
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (\hearts/\spades) -- ?}        
+\begin{itemize}
+    \item \dbl = 9+, \ftwon to 2\nt, no 5\major, no \major shortness
+    \item 2\nt = Lebensohl (see below)
+    \item 3\clubs = Stayman
+    \item 3\diams = $\rightarrow$ \hearts, \gf + superaccepts
+    \item 3\hearts = $\rightarrow$ \spades, \gf + superaccepts
+    \item 3\spades = takeout with opps' suit shortness, \gf
+    \item 4\diams, 4\hearts = Texas
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- 2\nt \\
+                (P) -- 3\clubs -- (P) -- ?}        
+\begin{itemize}
+    \item \pass/3\diams = to play
+    \item 3\hearts, 3\spades = \inv
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- \dbl \\
+                (P) -- ?}        
+\begin{itemize}
+    \item \pass = to play
+    \item 2\spades = 4\spades, \fonce
+    \item 2\nt = NAT, minimum
+    \item 3\clubs = NAT, minimum
+    \item 3\diams = NAT, minimum
+    \item 3\hearts over 2\spades = NAT, minimum
+    \item cue 3\hearts, 3\spades = maximum, no stopper, no 4\spades
+    \item 3\nt = maximum, stopper, no 4\spades
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
+                (2\spades) -- ?}        
+\begin{itemize}
+    \item \pass = \fonce
+    \item \dbl = penalty
+    \item 2\nt = do not want to defend, \gf
+    \item 3\clubs = NAT, \gf
+    \item 3\diams = NAT, \gf
+    \item 3\hearts = NAT, \gf
+    \item 3\spades = maximum, no \spades stopper
+    \item 3\nt = maximum, stopper
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
+                (2\spades) -- P -- (P) -- ?}
+\begin{itemize}
+    \item 3\spades = \spades shortness, \gf %%% Can be ask for stop??
+\end{itemize}
+
+\subsubsection*{(2\diams) -- \dbl -- (2\spades) -- \dbl \\
+                (3\hearts) -- ?}  
+\begin{itemize}
+    \item \pass = 14-16, no 4\spades OR power double, \fonce
+    \item \dbl = 14-16, 4\spades, defensive
+    
+\end{itemize}
+
+% \subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
+%                 (2\spades) -- ?}        
+% \begin{itemize}
+%     \item 2\nt = any hand with \hearts
+% \end{itemize}
 
 %%% SYSTEM END %%%
 
