--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -19,23 +19,148 @@
     \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
 \end{itemize}
 
-\subsubsection*{(2\hearts) -- 2\ntx\ -- (P) -- ?}
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
 \begin{itemize}
     \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
-    \item 3\diams\ = 4\spades\ \gf
-    \item 3\hearts\ = forces 3\spades, weak or \gf
+    \item 3\diams\ = 4\spades \gf
+    \item 3\hearts\ = forces 3\spades, 5+\spades, weak or \gf
     \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
     \item 3\nt\ = to play
-    \item 4\clubs\ = 5/5 \clubs\spades, may have shortness
-    \item 4\diams\ = 5/5 \diams\spades, may have shortness
+    \item 4\clubs\ = 6\clubs5\spades, may have shortness
+    \item 4\diams\ = 6\diams5\spades, may have shortness
     \item 4\hearts\ = 6+\spades
     \item 4\spades\ = minors
-    \item 4\nt\ = Quantitative
+    \item 4\nt\ = quantitative
 \end{itemize}
 
-TBD
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak with \diams
+    \item 3\hearts = 3-\spades
+    \item 3\spades = 4\spades
+    \item 3\nt = 5\spades
+    \item 4\clubs = 6+\spades
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\spades = no \hearts stopper
+    \item 3\nt = good \hearts stopper
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 3\nt = 3\spades
+    \item 4\clubs, 4\diams = own suit
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\diams \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\hearts = minors
+    \item 3\spades = 4\spades
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak, 5+\spades
+    \item 3\nt = \pass/correct
+    \item 4\clubs/4\diams = NAT
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\spades \\
+                (P) -- 3\nt -- (P) -- ?}
+\begin{itemize}
+    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\hearts = 1\spades, both minors
+    \item 4\spades = void \spades, both minors
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 4\hearts \\
+                (P) -- 4\spades -- (P) -- ?}
+\begin{itemize}
+    \item 4\nt = RKCB 1430
+    \item 5\anysuit{x} = EX 0314
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- ?}
+\begin{itemize}
+    \item 3\clubs\ = forces 3\diams, 1-\spades \gf OR weak with \diams
+    \item 3\diams\ = forces 3\hearts, 5+\hearts, weak or \gf
+    \item 3\hearts\ = long minor/minors, no \spades shortness, 3\spades = ASK
+    \item 3\spades\ = 4\hearts, \gf
+    \item 3\nt\ = to play
+    \item 4\clubs\ = 6\clubs5\hearts, may have shortness
+    \item 4\diams\ = 6\diams5\hearts, may have shortness
+    \item 4\hearts\ = 6+\hearts
+    \item 4\spades\ = minors
+    \item 4\nt\ = quantitative
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak with \diams
+    \item 3\hearts = 3-\hearts
+    \item 3\spades = 4\hearts
+    \item 3\nt = 5\hearts
+    \item 4\clubs = 6+\hearts
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\spades = no \spades stopper
+    \item 3\nt = good \spades stopper
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 3\nt = 3\hearts
+    \item 4\clubs, 4\diams = own suit
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\diams \\
+                (P) -- 3\hearts -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak, 5+\hearts
+    \item 3\nt = \pass/correct
+    \item 4\clubs/4\diams = NAT
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\hearts = 1\spades both minors
+    \item 4\spades = void \spades both minors
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\spades \\
+                (P) -- ?}
+\begin{itemize}
+    \item 4\clubs = 4\hearts
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 4\diams \\
+                (P) -- 4\hearts -- (P) -- ?}
+\begin{itemize}
+    \item 4\spades = RKCB 1403
+    \item 4\nt = EX \spades \textbf{0314}
+    \item 5\clubs/5\diams = EX \textbf{0314}
+\end{itemize}
 
 %%% SYSTEM END %%%
-
 
 \end{document}
