--- a/KrysiaBartek2024/source/otherBidsAndRules.tex
+++ b/KrysiaBartek2024/source/otherBidsAndRules.tex
@@ -67,5 +67,113 @@ minors or 3\clubs\ to show clubs.
 % to do: dealing with blackwood interference
 % gambling 3nt
 
+\section{Random bids}
+
+\begin{itemize}
+
+\item
+1\clubs\ -- 1\hearts \\ 3\clubs 
+
+3\clubs = \inv, (15)16+, 6+\clubs
+
+\item
+1\diams\ -- (1\spades) -- 2\spades 
+
+2\spades = \ftwon to 3\diams 
+
+\item
+(1\hearts) -- 1\dbl -- (1\nt) -- \dbl 
+
+\dbl = 9+
+
+\item 
+(2\diams$^\text{6\major}$) -- 4\clubs -- (P) -- 4\spades
+
+4\spades = \pass with \spades, do not bid over 5\clubs with \hearts
+
+\item
+(2\diams$^\text{6\major}$) -- \dbl -- (P\alrts) -- ?
+
+3\diams, 3\hearts = $\rightarrow$ \hearts/\spades
+
+\item
+(2\diams$^\text{6\major}$) -- 3\nt
+
+3\nt = not \gf
+
+\item Still too weak for Leaping Michaels: \\
+\cihandp{7}{AKJT7}{AQ852}{A2}{18}\\
+(2\spades) -- 3\spades
+
+\item 2\clubs -- 2\hearts \\ 3\nt -- ?
+
+\begin{itemize}
+\item 4\diams, 4\hearts = $\rightarrow$ \hearts/\spades
+\item 4\clubs = choose \major or bid 4\nt NAT
+\end{itemize}
+
+\item Too weak for Michaels: \\
+\cihandp{KQ986}{3}{AT986}{A7}{13}\\
+(3\hearts) -- 3\spades
+
+\item Not enough points/shape for 3\spades:\\
+\cihandp{KQT8}{85}{KJ8}{A642}{13} \\
+1\clubs -- 1\spades \\
+2\spades
+
+\item 1\anysuit{x} -- \dbl -- 1\anysuit{y} -- \dbl 
+
+\dbl is penalty!
+
+\item (2\spades) -- \dbl -- (3\spades) -- \dbl
+
+\dbl = both minors, but also okay to play 3\spades\dbl or 3\nt
+
+\item \gf in \vul{VUL}, \soff in \nvul{non-VUL}:
+
+\cihandp{T6}{K9832}{T62}{A95}{7} \\
+(2\spades) -- 2\nt -- (P) -- 3\diams \\
+(P) -- 3\hearts -- (P) -- ?
+
+\item 
+(2\hearts) -- 2\nt -- (P) -- 3\diams \\
+(P) -- 4\diams -- (P) -- 4\nt
+
+4\nt = to play
+
+\item
+(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+(P) -- 3\diams -- (P) -- 3\spades \\
+(P) -- 3\nt -- (P) -- 4\clubs \\
+?
+
+4\clubs = 5+\clubs
+\begin{itemize}
+    \item 4\diams = \clubs fixed
+    \item 4\hearts, 4\nt = to play
+\end{itemize}
+
+\item 
+(2\hearts) -- 2\nt -- (3\hearts) -- 4\hearts 
+
+4\hearts = $\rightarrow$ \spades
+
+\item 
+1\clubs -- (1\spades) --\dbl -- (P) \\
+1\nt -- (P) -- 2\diams
+
+\dbl = 4\hearts: 3-fit support ON\\
+2\diams = two-way checkback
+
+\item Good enough for Leaping Michaels:\\
+\cihandp{--}{AKJ42}{K2}{AKJ852}{19}
+
+(2\diams$^\text{6\major}$) -- 4\clubs
+
+
+
+
+\end{itemize}
+
 
 \end{document}
