--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -62,7 +62,7 @@ bidding higher suit denies lower stopper
 
 \subsubsection*{1\minor\ -- 2\hearts \\ ?}
 \begin{itemize}
-    \item 2\nt\ = ASK LSF
+    \item 2\nt\ = \lsf
 \end{itemize}
 
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
