--- a/KrysiaBartek2024/source/overcalling2nt.tex
+++ b/KrysiaBartek2024/source/overcalling2nt.tex
@@ -10,11 +10,29 @@
 \begin{document}
 \maketitle
 
+Over 2\nt opening we overcall only with good shape: 5+5+xx.
+The convention is called {\color{Red}\textbf{C}}{\color{Green}\textbf{RA}}{\color{Blue}\textbf{SH}}:
+the consecutive bids (\dbl/3\clubs/3\diams) show two suits of the same: 
+\begin{itemize}
+    \item {\color{Red}\textbf{C}}olor: \twosuit{\clubs}{\spades} OR \twosuit{\diams}{\hearts}
+    \item {\color{Green}\textbf{RA}}nge: \twosuit{\clubs}{\diams} OR \twosuit{\hearts}{\spades}
+    \item {\color{Blue}\textbf{SH}}ape: \twosuit{\clubs}{\hearts} OR \twosuit{\diams}{\spades}
+\end{itemize}
+Overcall only with good quality suit, for example:\\
+\cihandp{QJT9x}{QJT9x}{xx}{x}{6}\\
+Do not overcall with:\\
+\cihandp{Axxxx}{Axxxx}{xx}{x}{8}
+
 %%% PRIORITY: 350
 %%% TITLE: Overcalling 2\ntx
 %%% SYSTEM BEGIN %%%
 
-TBD
+\subsubsection*{(2\nt) -- ?}
+\begin{itemize}
+    \item \dbl = \twosuit{\clubs}{\spades} OR \twosuit{\diams}{\hearts}
+    \item 3\clubs = \twosuit{\clubs}{\diams} OR \twosuit{\hearts}{\spades}
+    \item 3\diams = \twosuit{\clubs}{\hearts} OR \twosuit{\diams}{\spades}
+\end{itemize}
 
 %%% SYSTEM END %%%
 
