--- a/KrysiaBartek2024/source/preemptOpening.tex
+++ b/KrysiaBartek2024/source/preemptOpening.tex
@@ -14,7 +14,16 @@
 %%% TITLE: Preempt opening
 %%% SYSTEM BEGIN %%%
 
-TBD
+\subsubsection*{2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \lsf
+\end{itemize}
+
+\subsubsection*{2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = \lsf
+    \item 2\nt = 5+\spades
+\end{itemize}
 
 %%% SYSTEM END %%%
 
