--- a/KrysiaBartek2024/source/miniSplinter.tex
+++ b/KrysiaBartek2024/source/miniSplinter.tex
@@ -30,12 +30,12 @@ any shortness 9-11, 4-card support, not \gf!
 
 \subsubsection*{1\hearts\ -- 2\spades \\ ?}
 \begin{itemize}
-    \item 2\nt\ = ASK LSF
+    \item 2\nt\ = \lsf
 \end{itemize}
 
 \subsubsection*{1\spades\ -- 2\nt \\ ?}
 \begin{itemize}
-    \item 3\clubs\ = ASK LSF
+    \item 3\clubs\ = \lsf
 \end{itemize}
 
 \subsubsection*{1\hearts\ -- 2\spades \\ 2\nt\ -- ?}
