--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -491,15 +491,28 @@ SYSTEM ON
 
 \section{\texorpdfstring{Preempt opening}{preemptOpening}}\label{sec:preemptOpening}
 
-\subsubsection*{2\spades -- ?}
+\subsubsection*{2\diams -- ?}
 \begin{itemize}
-    \item 2\nt = \lsf
+    \item 2\nt = OGUST (after 2\diams only!)
+\end{itemize}
+
+\subsubsection*{2\diams -- 2\diams \\ ?}
+\begin{itemize}
+    \item 3\clubs = 5-7, bad \diams quality
+    \item 3\diams = 5-7, good \diams quality
+    \item 3\hearts = 8-10, bad \diams quality
+    \item 3\spades = 8-10, good \diams quality
 \end{itemize}
 
 \subsubsection*{2\hearts -- ?}
 \begin{itemize}
     \item 2\spades = \lsf
     \item 2\nt = 5+\spades
+\end{itemize}
+
+\subsubsection*{2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \lsf
 \end{itemize}
 
 \section{\texorpdfstring{Acol 2{\color{OliveGreen}\clubsuit}}{acol2c}}\label{sec:acol2c}
@@ -574,7 +587,75 @@ System as after 2\nt\ opening
 
 \section{\texorpdfstring{Dealing with preempts}{dealingWithPreempts}}\label{sec:dealingWithPreempts}
 
-TBD
+\subsubsection*{(2\hearts) -- ?}
+\begin{itemize}
+    \item 3\spades = strong hand, solid suit
+    \item 3\hearts = Michaels, \ftwon to 4\anysuit{x}
+    \item 4\clubs/4\diams = Leaping Michaels, \gf
+    \item 4\hearts = \minor, strong
+    \item 4\nt = \minor, weaker then 4\hearts
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (P) -- ?}
+\begin{itemize}
+    \item 2\nt = Better Minor Lebensohl
+    \item 3\clubs = 0-11, 5+\clubs
+    \item 2\spades = weak
+    \item 3\diams = \inv (8-11)
+    \item 3\hearts = no 4\spades, no \hearts stopper
+    \item 3\spades = 5\spades, \inv (8-11) \imp
+    \item 3\nt = no 4\spades, \hearts stopper
+    \item 4\hearts = \minor, no \hearts control, Slam Try
+    \item 4\spades = to play
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (P) -- 2\nt \\
+                (P) -- 3\mins -- (P) -- ?}
+\begin{itemize}
+    \item 3\diams = weak
+    \item 3\hearts = 4\spades, no \hearts stopper
+    \item 3\spades = 4\spades, \inv (8-11) \imp
+    \item 3\nt = 4\spades, \hearts stopper
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (3\hearts) -- ?}
+\begin{itemize}
+    \item \dbl = no 4\spades, 10+
+\end{itemize}
+
+\subsubsection*{(2\spades) -- ?}
+\begin{itemize}
+    \item 3\spades = Michaels, \ftwon to 4\anysuit{x}
+    \item 4\clubs/4\diams = Leaping Michaels, \gf
+    \item 4\spades = \minor, strong
+    \item 4\nt = \minor, weaker then 4\hearts
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (P) -- ?}
+\begin{itemize}
+    \item 2\nt = Better Minor Lebensohl
+    \item 3\clubs = 0-11, 5+\clubs
+    \item 3\diams/3\hearts = \inv (8-11)
+    \item 3\spades = no 4\hearts, no \spades stopper
+    \item 3\nt = no 4\hearts, \spades stopper
+    \item 4\hearts = to play
+    \item 4\hearts = \minor, no \spades control, Slam Try
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
+                (P) -- 3\mins -- (P) -- ?}
+\begin{itemize}
+    \item 3\hearts/3\diams = to play
+    \item 3\spades = 4\hearts, no \spades stopper
+    \item 3\nt = 4\hearts, \spades stopper
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (4\spades) -- ?}
+\begin{itemize}
+    \item 4\nt = two-suited OR weak \hearts
+    \item 5\clubs/5\diams = to play
+    \item 5\hearts = Slam Try
+\end{itemize}
 
 \section{\texorpdfstring{Rebid with 3-card support}{rebid3card}}\label{sec:rebid3card}
 
@@ -749,7 +830,29 @@ any shortness 9-11, 4-card support, not \gf!
 
 \section{\texorpdfstring{Transfers after 1\majs\ (\dbl)}{Transfers1MX}}\label{sec:Transfers1MX}
 
-TBD
+\subsubsection*{1\hearts -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\spades = NAT, 4+\spades, \fonce
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
+    \item 2\hearts = 4-7, 3\hearts
+    \item 3\diams = 4+\hearts, 6-9
+    \item 3\hearts = 0-6 \hcp
+\end{itemize}
+
+\subsubsection*{1\spades -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts
+    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
+    \item 2\spades = 4-7, 3\spades
+    \item 3\hearts = 4+\spades, 6-9
+    \item 3\spades = 0-6 \hcp
+\end{itemize}
 
 \section{\texorpdfstring{2\ntx\ overcall after major preempt}{preempt2nt}}\label{sec:preempt2nt}
 
@@ -904,9 +1007,9 @@ TBD
 
 \subsubsection*{(2\nt) -- ?}
 \begin{itemize}
-    \item \dbl = \clubs\spades OR \diams\hearts
-    \item \clubs = \clubs\diams OR \hearts\spades
-    \item \diams = \clubs\hearts OR \diams\spades
+    \item \dbl = \twosuit{\clubs}{\spades} OR \twosuit{\diams}{\hearts}
+    \item 3\clubs = \twosuit{\clubs}{\diams} OR \twosuit{\hearts}{\spades}
+    \item 3\diams = \twosuit{\clubs}{\hearts} OR \twosuit{\diams}{\spades}
 \end{itemize}
 
 \section{\texorpdfstring{Dealing with Multi/Wilkosz}{dealingWithMulti}}\label{sec:dealingWithMulti}
