--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -43,7 +43,7 @@
 \newcommand{\gf}{\color{BrickRed}\textbf{GF}\color{black}\xspace}
 \newcommand{\nf}{\color{Green}\textbf{NF}\color{black}\xspace}
 \newcommand{\fonce}{\color{RedViolet}\textbf{F1}\color{black}\hspace{4pt}\xspace}
-\newcommand{\ftwon}{\color{RedViolet}\textbf{F}\color{black}\hspace{4pt}\xspace}
+\newcommand{\ftwon}{\color{RedViolet}\textbf{F}\color{black}\xspace}
 \newcommand{\inv}{\color{PineGreen}\textbf{INV}\color{black}\xspace}
 \newcommand{\invp}{\color{Blue}\textbf{INV$^+$}\color{black}\xspace}
 \newcommand{\slamtry}{\color{WildStrawberry}\textbf{Slam Try}\color{black}\hspace{4pt}}
