--- a/KrysiaBartek2024/source/Transfers1MX.tex
+++ b/KrysiaBartek2024/source/Transfers1MX.tex
@@ -14,9 +14,37 @@
 %%% TITLE: Transfers after 1\majs\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
-TBD
+\subsubsection*{1\hearts -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\spades = NAT, 4+\spades, \fonce
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
+    \item 2\hearts = 4-7, 3\hearts
+    \item 3\diams = 4+\hearts, 6-9
+    \item 3\hearts = 0-6 \hcp
+\end{itemize}
+
+\subsubsection*{1\spades -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts
+    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
+    \item 2\spades = 4-7, 3\spades
+    \item 3\hearts = 4+\spades, 6-9
+    \item 3\spades = 0-6 \hcp
+\end{itemize}
 
 %%% SYSTEM END %%%
+
+\section{Transfer rules}
+\begin{itemize}
+    \item Do not transfer to 5-card suit.
+    \item Transfer to height suit first.
+\end{itemize}
 
 
 \end{document}
