--- a/KrysiaBartek2024/source/dealingWithPreempts.tex
+++ b/KrysiaBartek2024/source/dealingWithPreempts.tex
@@ -14,7 +14,75 @@
 %%% TITLE: Dealing with preempts
 %%% SYSTEM BEGIN %%%
 
-TBD
+\subsubsection*{(2\hearts) -- ?}
+\begin{itemize}
+    \item 3\spades = strong hand, solid suit
+    \item 3\hearts = Michaels, \ftwon to 4\anysuit{x}
+    \item 4\clubs/4\diams = Leaping Michaels, \gf
+    \item 4\hearts = \minor, strong
+    \item 4\nt = \minor, weaker then 4\hearts
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (P) -- ?}
+\begin{itemize}
+    \item 2\nt = Better Minor Lebensohl
+    \item 3\clubs = 0-11, 5+\clubs
+    \item 2\spades = weak
+    \item 3\diams = \inv (8-11)
+    \item 3\hearts = no 4\spades, no \hearts stopper
+    \item 3\spades = 5\spades, \inv (8-11) \imp
+    \item 3\nt = no 4\spades, \hearts stopper
+    \item 4\hearts = \minor, no \hearts control, Slam Try
+    \item 4\spades = to play
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (P) -- 2\nt \\
+                (P) -- 3\mins -- (P) -- ?}
+\begin{itemize}
+    \item 3\diams = weak
+    \item 3\hearts = 4\spades, no \hearts stopper
+    \item 3\spades = 4\spades, \inv (8-11) \imp
+    \item 3\nt = 4\spades, \hearts stopper
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- \dbl -- (3\hearts) -- ?}
+\begin{itemize}
+    \item \dbl = no 4\spades, 10+
+\end{itemize}
+
+\subsubsection*{(2\spades) -- ?}
+\begin{itemize}
+    \item 3\spades = Michaels, \ftwon to 4\anysuit{x}
+    \item 4\clubs/4\diams = Leaping Michaels, \gf
+    \item 4\spades = \minor, strong
+    \item 4\nt = \minor, weaker then 4\hearts
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (P) -- ?}
+\begin{itemize}
+    \item 2\nt = Better Minor Lebensohl
+    \item 3\clubs = 0-11, 5+\clubs
+    \item 3\diams/3\hearts = \inv (8-11)
+    \item 3\spades = no 4\hearts, no \spades stopper
+    \item 3\nt = no 4\hearts, \spades stopper
+    \item 4\hearts = to play
+    \item 4\hearts = \minor, no \spades control, Slam Try
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (P) -- 2\nt \\
+                (P) -- 3\mins -- (P) -- ?}
+\begin{itemize}
+    \item 3\hearts/3\diams = to play
+    \item 3\spades = 4\hearts, no \spades stopper
+    \item 3\nt = 4\hearts, \spades stopper
+\end{itemize}
+
+\subsubsection*{(2\spades) -- \dbl -- (4\spades) -- ?}
+\begin{itemize}
+    \item 4\nt = two-suited OR weak \hearts
+    \item 5\clubs/5\diams = to play
+    \item 5\hearts = Slam Try
+\end{itemize}
 
 %%% SYSTEM END %%%
 
