--- a/KrysiaBartek2024/source/preemptOpening.tex
+++ b/KrysiaBartek2024/source/preemptOpening.tex
@@ -14,15 +14,28 @@
 %%% TITLE: Preempt opening
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{2\spades -- ?}
+\subsubsection*{2\diams -- ?}
 \begin{itemize}
-    \item 2\nt = \lsf
+    \item 2\nt = OGUST (after 2\diams only!)
+\end{itemize}
+
+\subsubsection*{2\diams -- 2\diams \\ ?}
+\begin{itemize}
+    \item 3\clubs = 5-7, bad \diams quality
+    \item 3\diams = 5-7, good \diams quality
+    \item 3\hearts = 8-10, bad \diams quality
+    \item 3\spades = 8-10, good \diams quality
 \end{itemize}
 
 \subsubsection*{2\hearts -- ?}
 \begin{itemize}
     \item 2\spades = \lsf
     \item 2\nt = 5+\spades
+\end{itemize}
+
+\subsubsection*{2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \lsf
 \end{itemize}
 
 %%% SYSTEM END %%%
